# seenum

./: Cargo.toml
enum-select-core/: Cargo.toml
enum-select-core/src/: lib.rs
enum-select-derive/: Cargo.toml
enum-select-derive/src/: lib.rs
seenum-core/: Cargo.toml
seenum-core/src/: display.rs  enum_select.rs  lib.rs
seenum-derive/: Cargo.toml
seenum-derive/src/: lib.rs
src/: lib.rs
tests/: basic.rs  display.rs
tests/ui/: different_repr.rs  different_repr.stderr  empty_enum.rs  empty_enum.stderr  enum_discriminant.rs  enum_discriminant.stderr  no_repr_usize.rs  no_repr_usize.stderr  non_unit.rs  non_unit.stderr
