[package]
name = "seenum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seenum-derive = { path = "seenum-derive", version = "0.1.0" }

[dev-dependencies]
trybuild = "1"

[workspace]
members = ["seenum-derive", "seenum-core"]