[package]
name = "enum-select-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-error = { version = "1", default-features = false }
enum-select-core = { path = "../enum-select-core", version = "0.1.0" }
